...
                        <ListView
                            android:id="@+id/participants_list"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:nestedScrollingEnabled="true"
                            android:visibility="gone"
                            app:layout_constraintBottom_toTopOf="@+id/participants"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <AutoCompleteTextView
                            android:id="@+id/participants"
...
                            app:drawableLeftCompat="@drawable/baseline_meeting_room_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/show_spinner_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:text="@string/room"
                            android:textAllCaps="false"
                            android:textColor="@color/header_blue"
...
                            app:drawableLeftCompat="@drawable/baseline_edit_calendar_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textview_date"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="end|center"
                            android:hint="@string/date"
                            android:textAllCaps="false"
                            android:textColor="@color/header_blue"
...
                            app:drawableLeftCompat="@drawable/baseline_access_time_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textview_timing"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:gravity="end|center"
                            android:hint="@string/time"
                            android:textAllCaps="false"
...
                            app:drawableLeftCompat="@drawable/baseline_edit_note_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/editText_subject"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_margin="6dp"
                            android:autofillHints="@string/meeting_time"
                            android:backgroundTint="@color/header_blue"
...
                            android:textColor="@color/header_blue"
                            android:textColorHint="@color/header_blue"
                            android:textSize="26sp"
                            android:textStyle="bold"
                            app:drawableEndCompat="@drawable/baseline_edit_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/warning_subject_icon"
                            app:layout_constraintHorizontal_bias="0.927"
                            app:layout_constraintStart_toEndOf="@+id/subject_textview"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/warning_subject_icon"
...

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_meeting_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/add_meeting_btn"
                android:src="@drawable/ic_send"
...
