<resources>
    <string name="app_name">Lamzone</string>
    <string name="title">Ma réu</string>
    <string name="icon_filtered_list">icon_filtered_list</string>
    <string name="add_réu_btn">add_réu_btn</string>
    <string name="meeting_image">meeting_image</string>
    <string name="meeting_info">meeting_info</string>
    <string name="delete_meeting_btn">delete_meeting_btn</string>
    <string name="new_meeting">Nouvelle Réunion</string>
    <string name="meeting_location">Lieux de la réunion</string>
    <string name="location">Location</string>
    <string name="meeting_time">Heure de la réunion</string>
    <string name="time">Heure</string>
    <string name="subject_ellipsize">Sujet…</string>
    <string name="subject">Sujet</string>
    <string name="meeting_subject">Sujet de la réunion</string>
    <string name="participants_emails">Emails des participants</string>
    <string name="participants">Participants</string>
    <string name="add_meeting_btn">add_meeting_btn</string>
    <string name="email_separating_precision">(Séparé par une virgule)</string>
    <string name="loc">loc</string>
    <string name="go_back_home">go back Home</string>
    <string name="choose_a_room">Choose a room</string>
    <string name="selecting_room_spinner">selecting room spinner</string>
    <string name="date">Date</string>
    <string name="room_choice">Salle de réunion</string>
    <string name="room_spinner_btn">Salles</string>
    <string name="form_errors">Tout les champs doivent être remplis !</string>
    <string name="form_room_error">Sélectionnez une salle pour la réunion !</string>
    <string name="form_date_error">Renseignez la date de la réunion !</string>
    <string name="form_time_error">Renseignez l\'heure de la réunion !</string>
    <string name="form_duration_error">Renseignez la durée de la réunion !</string>
    <string name="form_participants_error">Sélectionnez les participants pour la réunion !</string>
    <string name="form_subject_error">Renseignez le sujet de la réunion !</string>
    <string name="filtered_meeting_error">Pas de réunion trouvée avec ces critères</string>
    <string name="filtrer_par_date">Filtrer par date</string>
    <string name="filtrer_par_room">Filtrer par salle</string>
    <string name="reset_filter_btn">reset all filter btn</string>
    <string name="add_participants">Ajouter</string>
    <string name="duration">Durée</string>
    <string name="error_icon_subject">Error icon subject</string>
    <string name="error_icon_duration">Error icon duration</string>
    <string name="error_icon_time">Error icon time</string>
    <string name="error_icon_date">Error icon date</string>
    <string name="error_icon_room">Error icon room</string>
    <string name="error_icon_participants">Error icon participants</string>
    <string name="same_participant_error">Vous ne pouvez pas ajouter deux fois le même participant !</string>
    <string name="false_participant_error">Veuillez renseigner un email valide !</string>
    <string name="no_meeting_icon">Icon to show that there\'s no meeting yet</string>
    <string name="room">Salles</string>
    <string name="add_new_participant">Add new participant</string>
    <string name="time_selection">Séléctionner une heure</string>
    <string name="date_selection">Séléctionner une date</string>
    <string name="no_meetings_error">Ajouter au moins 2 réunions avant de filtrer la liste !</string>
</resources>