...

                    </RelativeLayout>

                </HorizontalScrollView>

                <ImageView
                    android:id="@+id/delete_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_delete_meeting"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/delete_meeting_btn"
...
